# DJApogeeAudioLib

./: .gitignore  CMakeLists.txt  README.md
include/: fx_man.h  music.h
source/: _al_midi.h  _midi.h  _multivc.h  _pas16.h  _sndscap.h  a_dpmi.c  a_dpmi.h  adlibfx.c  al_midi.c  al_midi.h  blaster.c  blaster.h  blastold.c  debugio.c  djconfig.h  dma.c  dma.h  fx_man.c  gmtimbre.c  gus.c  gusmidi.c  guswave.c  interrup.h  irq.h  linklist.h  ll_man.c  midi.c  midi.h  mpu401.c  multivoc.c  multivoc.h  multvcas.c  music.c  mv_mix.asm  mv_mix1.asm  mv_mix16.asm  mv_mix2.asm  mv_mix2c.c  mvreverb.asm  pas16.c  (+10 more)
source/old/: blastold.c
source/unused/: _guswave.h  _pas16.h  awe32.c  gusmidi2.c  irq.c  mv1.c
util/pm/: CMakeLists.txt  pm.c
util/ps/: CMakeLists.txt  Makefile  ps.c  wbuild.sh
util/timer/: CMakeLists.txt  timer.c
